# module_virtualisation_docker

./: README.md  docker-compose.yml  package.json
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .dockerignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/components/: Counter.vue
